header section desktop

--- a/index.html
+++ b/index.html
@@ -9,7 +9,23 @@
   <body>
 
 
+    <div class="bg_gradient"></div>
+
+    <div class="wrapper_center">
     
+      <header class="header">
+        <img src="src/assets/images/Logo.svg" class="header__logo">
+        <div class="header__links">
+          <a href="#">HOME</a>
+          <a href="#">ABOUT US</a>
+          <a href="#">SERVICES</a>
+          <a href="#">PORTFOLIO</a>
+          <a href="#">TESTIMONIALS</a>
+          <a href="#">CONTACT US</a>
+        </div>
+      </header>
+
+    </div>
 
 
     <script type="module" src="/main.js"></script>
