--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     
       <header class="header">
         <img src="src/assets/images/Logo.svg" class="header__logo">
+        <img src="src/assets/icons/bars-solid 1.svg" class="header__menu_open_btn" id="open">
         <div class="header__links">
           <a href="#">HOME</a>
           <a href="#">ABOUT US</a>
@@ -24,6 +25,15 @@
           <a href="#">CONTACT US</a>
         </div>
       </header>
+
+      <main class="hero">
+         <img src="src/assets/images/undraw_development_re_g5hq.svg" class="hero__image">
+         <div class="hero__text">
+          <h1>Welcome to TechVision Solutions</h1>
+          <p>Empowering Your Digital Future</p>
+          <button class="cta">Explore Our Solutions</button>
+         </div>
+      </main>
 
     </div>
 
