our services section

--- a/index.html
+++ b/index.html
@@ -45,6 +45,28 @@
         <img src="src/assets/images/undraw_team_page_re_cffb 1.svg" class="about__image">
       </section>
 
+      <section class="services">
+        <h1 class="services__header">Our Services</h1>
+        <div class="services__container">
+
+          <div class="service">
+            <div class="icon_bg"><img src="src/assets/icons/code-solid 1.svg"></div>
+            <p class="service__title">Software Development</p>
+          </div>
+
+          <div class="service">
+            <div class="icon_bg_light"><img src="src/assets/icons/robot-solid 1.svg"></div>
+            <p class="service__title">AI & Machine Learning</p>
+          </div>
+
+          <div class="service">
+            <div class="icon_bg"><img src="src/assets/icons/shield-halved-solid 1.svg"></div>
+            <p class="service__title">Cybersecurity</p>
+          </div>
+        
+        </div>
+      </section>
+
     </div>
 
 
