--- a/index.html
+++ b/index.html
@@ -105,6 +105,47 @@
         </div>
       </section>
 
+      <section class="testimonials">
+        <h1>Testimonials</h1>
+        <div class="testimonials__container">
+          
+          <div>
+            <div class="testimonial">
+              <img src="src/assets/icons/quote-left-solid 1.svg">
+              <p>TechVision Solutions transformed our outdated software system into a modern, efficient solution. Their team's expertise, professionalism, and commitment to excellence made the entire process seamless. We couldn't be happier with the results!</p>
+            </div>
+            <div class="blue_bg">
+              <img src="src/assets/images/client_1.jpg" class="client_image">
+              <h1>Jeroen Gyles</h1>
+            </div>
+          </div>
+
+          <div>
+            <div class="testimonial">
+              <img src="src/assets/icons/quote-left-solid 1.svg">
+              <p>TechVision Solutions transformed our outdated software system into a modern, efficient solution. Their team's expertise, professionalism, and commitment to excellence made the entire process seamless. We couldn't be happier with the results!</p>
+            </div>
+            <div class="blue_bg">
+              <img src="src/assets/images/client_3.jpg" class="client_image">
+              <h1>Budzill Jonatan</h1>
+            </div>
+          </div>
+
+          <div>
+            <div class="testimonial">
+              <img src="src/assets/icons/quote-left-solid 1.svg">
+              <p>TechVision Solutions exceeded our expectations with their comprehensive cybersecurity services. They've helped us strengthen our defenses and mitigate potential risks. I highly recommend TechVision Solutions to any business looking to bolster their cybersecurity posture.</p>
+            </div>
+            <div class="blue_bg">
+              <img src="src/assets/images/client_2.jpg" class="client_image">
+              <h1>Mia Siebert</h1>
+            </div>
+          </div>
+          
+
+        </div>
+      </section>
+
     </div>
 
 
