--- a/index.html
+++ b/index.html
@@ -171,6 +171,23 @@
          </div>
       </section>
 
+      <footer class="footer">
+        <div class="footer__first">
+          <p>Privacy Policy</p>
+          <div class="line"></div>
+          <p>Terms of Service</p>
+          <div class="line"></div>
+          <p>Careers</p>
+        </div>
+
+        <div class="footer__second">
+          <div class="bg"></div>
+          <img src="src/assets/icons/facebook-f.svg">
+          <img src="src/assets/icons/x-twitter.svg">
+          <img src="src/assets/icons/linkedin 1.svg">
+        </div>
+      </footer>
+
     </div>
 
 
